--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+ <!DOCTYPE html>
+ <html lang="en">
   <head>
     <base href="#">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Rajeel Ali is a Social Media Manager, Frontend Developer, and Digital Marketing Specialist. Explore his portfolio, skills, and projects.">
     <title>Rajeel Ali - Digital Innovator</title>
-    <link rel="icon" type="image/png" href="favicon.ico">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/socicon@3.0.5/css/socicon.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.min.css" />
   </head>
   <body>
     <header>
@@ -57,7 +58,7 @@
               <a href="Rajeel Ali Resumé.pdf" target="_blank" class="download-cv-btn">Download Resume</a>
             </div>
             <div class="about-image">
-              <img src="images/pfp.jpg" alt="Rajeel Ali" />
+              <img src="images/optimized/pfp.jpg" alt="Rajeel Ali" />
             </div>
           </div>
         </div>
@@ -118,6 +119,26 @@
                 <div class="skill-progress-bar" data-progress="92"></div>
               </div>
             </div>
+            <div class="skill-card" data-tilt>
+              <div class="skill-icon">♟️</div>
+              <h3 class="skill-title">Chess Prodigy</h3>
+              <p class="skill-description">
+                A strategic thinker with a passion for the game of chess.
+              </p>
+              <div class="skill-progress">
+                <div class="skill-progress-bar" data-progress="30"></div>
+              </div>
+            </div>
+            <div class="skill-card" data-tilt>
+              <div class="skill-icon">⚔️</div>
+              <h3 class="skill-title">Clash of Clans Mastery</h3>
+              <p class="skill-description">
+                A seasoned veteran of virtual battlefields, with a near-maxed-out Town Hall.
+              </p>
+              <div class="skill-progress">
+                <div class="skill-progress-bar" data-progress="82"></div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -128,23 +149,23 @@
           <h2 class="section-title">Featured Projects</h2>
           <div class="projects-grid">
             <a href="https://sites.google.com/view/rajeeldesigns" class="project-card" data-tilt>
-              <img src="images/image4.jpg" alt="Design Portfolio" class="project-image" />
-              <h3 class="project-title" style="color: white;">Design Portfolio</h3>
-              <p class="project-description" style="color: white;">Check out my design portfolio.</p>
+              <img src="images/optimized/image4.jpg" alt="Design Portfolio" class="project-image" />
+              <h3 class="project-title">Design Portfolio</h3>
+              <p class="project-description">Check out my design portfolio.</p>
               <span class="project-link">View my designs portfolio</span>
             </a>
             <a href="https://proprofile.web.app" class="project-card" data-tilt>
               <img src="https://proprofile.web.app/images/images-logo.png" alt="ProProfile Website" class="project-image" />
-              <h3 class="project-title" style="color: white;">ProProfile Website</h3>
-              <p class="project-description" style="color: white;">
+              <h3 class="project-title">ProProfile Website</h3>
+              <p class="project-description">
                 Designed and developed the ProProfile website, showcasing my skills in frontend development and UX/UI design.
               </p>
               <span class="project-link">Explore Site</span>
             </a>
             <a href="ecom/index1.html" class="project-card" data-tilt>
-              <img src="images/image3.jpg" alt="E-commerce Project" class="project-image" />
-              <h3 class="project-title" style="color: white;">E-commerce Website Full Stack</h3>
-              <p class="project-description" style="color: white;">
+              <img src="images/optimized/image3.jpg" alt="E-commerce Project" class="project-image" />
+              <h3 class="project-title">E-commerce Website Full Stack</h3>
+              <p class="project-description">
                 Check out this site I made for my university course project.
               </p>
               <span class="project-link">Case Study</span>
@@ -153,28 +174,50 @@
         </div>
       </section>
 
-      <!-- ADDITIONAL RESOURCES SECTION -->
-      <section id="additional-resources" class="section">
+      <!-- BADGES SECTION -->
+      <section id="badges" class="section">
         <div class="container">
-          <h2 class="section-title">Additional Resources</h2>
+          <h2 class="section-title">Badges</h2>
           <div class="projects-grid">
-            <a href="https://www.linkedin.com/in/rajeel-ali/" class="project-card" data-tilt>
-              <img src="images/image1.jpg" alt="LinkedIn Profile" class="project-image" />
-              <h3 class="project-title" style="color: white;">LinkedIn Profile</h3>
-              <p class="project-description" style="color: white;">Connect with me professionally and explore collaboration opportunities.</p>
-              <span class="project-link">Visit LinkedIn</span>
+            <a href="https://www.coursera.org/account/accomplishments/professional-cert/624FTQJSQCVU" target="_blank" class="project-card" data-tilt>
+              <img src="images/optimized/meta-social-media-marketing-professional-certificate.png" alt="Meta Social Media Marketing" class="project-image" />
+              <h3 class="project-title">Meta Social Media Marketing</h3>
+              <p class="project-description">Meta</p>
             </a>
-            <a href="https://rajeel.notion.site" class="project-card" data-tilt>
-              <img src="images/image2.jpg" alt="Notion Site" class="project-image" />
-              <h3 class="project-title" style="color: white;">Get to Know Me</h3>
-              <p class="project-description" style="color: white;">Explore my Notion site for comprehensive information about my work and experiences.</p>
-              <span class="project-link">Visit Notion Site</span>
+            <div class="project-card" data-tilt>
+              <img src="images/optimized/develop-generative-ai-applications-get-started.png" alt="Develop Generative AI Applications" class="project-image" />
+              <h3 class="project-title">Develop Generative AI Applications</h3>
+              <p class="project-description">Coursera</p>
+            </div>
+            <div class="project-card" data-tilt>
+              <img src="images/optimized/meta-certified-digital-marketing-associate.png" alt="Meta Certified Digital Marketing Associate" class="project-image" />
+              <h3 class="project-title">Meta Certified Digital Marketing Associate</h3>
+              <p class="project-description">Meta</p>
+            </div>
+            <div class="project-card" data-tilt>
+              <img src="images/optimized/data-analysis-with-python.png" alt="Data Analysis with Python" class="project-image" />
+              <h3 class="project-title">Data Analysis with Python</h3>
+              <p class="project-description">Coursera</p>
+            </div>
+            <div class="project-card" data-tilt>
+              <img src="images/optimized/AI-Essentials-Certificate.png" alt="Google AI Essentials" class="project-image" />
+              <h3 class="project-title">Google AI Essentials</h3>
+              <p class="project-description">Coursera</p>
+            </div>
+            <a href="https://www.coursera.org/account/accomplishments/professional-cert/JFS43RKDY6AJ" target="_blank" class="project-card" data-tilt>
+              <img src="images/optimized/google-business-intelligence-certificate.png" alt="Google Business Intelligence" class="project-image" />
+              <h3 class="project-title">Google Business Intelligence</h3>
+              <p class="project-description">Coursera</p>
             </a>
-            <a href="projects/index.html" class="project-card" data-tilt>
-              <img src="images/project.png" alt="Practice Projects" class="project-image" />
-              <h3 class="project-title" style="color: white;">Practice Projects</h3>
-              <p class="project-description" style="color: white;">Explore a collection of my practice projects and coding exercises.</p>
-              <span class="project-link">View Projects</span>
+            <a href="https://www.coursera.org/account/accomplishments/professional-cert/Q82E4FC847NG" target="_blank" class="project-card" data-tilt>
+              <img src="images/optimized/meta-front-end-developer-certificate.png" alt="Meta Front-End Developer" class="project-image" />
+              <h3 class="project-title">Meta Front-End Developer</h3>
+              <p class="project-description">Coursera</p>
+            </a>
+            <a href="https://www.coursera.org/account/accomplishments/professional-cert/USW4WCD29AAR" target="_blank" class="project-card" data-tilt>
+              <img src="images/optimized/google-digital-marketing-and-e-commerce-professiona.png" alt="Google Digital Marketing & E-commerce" class="project-image" />
+              <h3 class="project-title">Google Digital Marketing & E-commerce</h3>
+              <p class="project-description">Coursera</p>
             </a>
           </div>
         </div>
@@ -185,52 +228,74 @@
         <div class="container">
           <h2 class="section-title">My Certs</h2>
           <div class="projects-grid">
-            <div class="project-card" data-tilt>
-              <img src="images/cert_m365.png" alt="Microsoft 365 Fundamentals" class="project-image" />
-              <h3 class="project-title" style="color: white;">Microsoft 365 Fundamentals</h3>
-              <p class="project-description" style="color: white;">Microsoft</p>
-            </div>
-            <div class="project-card" data-tilt>
-              <img src="https://s3.amazonaws.com/coursera_assets/meta_images/generated/CERTIFICATE_LANDING_PAGE/CERTIFICATE_LANDING_PAGE~MR3AE9QALSJF/CERTIFICATE_LANDING_PAGE~MR3AE9QALSJF.jpeg" alt="Google Digital Marketing &amp; E-commerce" class="project-image" />
-              <h3 class="project-title" style="color: white;">Google Digital Marketing &amp; E-commerce</h3>
-              <p class="project-description" style="color: white;">Google</p>
-            </div>
-            <div class="project-card" data-tilt>
-              <img src="images/cert_google_digital2.png" alt="Google Digital Marketing &amp; E-commerce" class="project-image" />
-              <h3 class="project-title" style="color: white;">Google Digital Marketing &amp; E-commerce</h3>
-              <p class="project-description" style="color: white;">Google</p>
-            </div>
-            <div class="project-card" data-tilt>
-              <img src="images/cert_english.png" alt="Improve Your English Communication Skills" class="project-image" />
-              <h3 class="project-title" style="color: white;">Improve Your English Communication Skills</h3>
-              <p class="project-description" style="color: white;">Georgia Institute of Technology</p>
-            </div>
-            <div class="project-card" data-tilt>
-              <img src="images/cert_web_design.png" alt="Web Design for Everybody" class="project-image" />
-              <h3 class="project-title" style="color: white;">Web Design for Everybody</h3>
-              <p class="project-description" style="color: white;">University of Michigan</p>
-            </div>
-            <div class="project-card" data-tilt>
-              <img src="images/cert_google_bi.png" alt="Google Business Intelligence" class="project-image" />
-              <h3 class="project-title" style="color: white;">Google Business Intelligence</h3>
-              <p class="project-description" style="color: white;">Google</p>
-            </div>
-            <div class="project-card" data-tilt>
-              <img src="images/cert_meta_frontend.png" alt="Meta Front-End Developer" class="project-image" />
-              <h3 class="project-title" style="color: white;">Meta Front-End Developer</h3>
-              <p class="project-description" style="color: white;">Meta</p>
-            </div>
-            <div class="project-card" data-tilt>
-              <img src="images/cert_effective_comm.png" alt="Effective Communication" class="project-image" />
-              <h3 class="project-title" style="color: white;">Effective Communication</h3>
-              <p class="project-description" style="color: white;">University of Colorado Boulder</p>
-            </div>
+            <a href="https://www.coursera.org/account/accomplishments/specialization/AWX9ET5SG5NQ" target="_blank" class="project-card" data-tilt>
+              <img src="images/optimized/cert_m365.png" alt="Microsoft 365 Fundamentals" class="project-image" />
+              <h3 class="project-title">Microsoft 365 Fundamentals</h3>
+              <p class="project-description">Microsoft</p>
+            </a>
+            <a href="https://www.coursera.org/account/accomplishments/professional-cert/Q82E4FC847NG" target="_blank" class="project-card" data-tilt>
+              <img src="images/optimized/Meta Front-End Developer.png" alt="Meta Front-End Developer" class="project-image" />
+              <h3 class="project-title">Meta Front-End Developer</h3>
+              <p class="project-description">Meta</p>
+            </a>
+            <a href="https://www.coursera.org/account/accomplishments/professional-cert/624FTQJSQCVU" target="_blank" class="project-card" data-tilt>
+              <img src="images/optimized/Meta Social Media Marketing.png" alt="Meta Social Media Marketing" class="project-image" />
+              <h3 class="project-title">Meta Social Media Marketing</h3>
+              <p class="project-description">Meta</p>
+            </a>
+            <a href="https://www.coursera.org/account/accomplishments/specialization/ZK4Z6CFZ3KJZ" target="_blank" class="project-card" data-tilt>
+              <img src="images/optimized/Web Design for Everybody; Basics of Web Development & Coding speciallization.png" alt="Web Design for Everybody" class="project-image" />
+              <h3 class="project-title">Web Design for Everybody</h3>
+              <p class="project-description">University of Michigan</p>
+            </a>
+            <a href="https://www.coursera.org/account/accomplishments/professional-cert/JFS43RKDY6AJ" target="_blank" class="project-card" data-tilt>
+              <img src="images/optimized/Google Business Intelligence.png" alt="Google Business Intelligence" class="project-image" />
+              <h3 class="project-title">Google Business Intelligence</h3>
+              <p class="project-description">Google</p>
+            </a>
+            <a href="https://www.coursera.org/account/accomplishments/specialization/QAWAMYG6JUAF" target="_blank" class="project-card" data-tilt>
+              <img src="images/optimized/English communication Skills.png" alt="English Communication Skills" class="project-image" />
+              <h3 class="project-title">English Communication Skills</h3>
+              <p class="project-description">Georgia Institute of Technology</p>
+            </a>
+            <a href="https://www.coursera.org/account/accomplishments/specialization/WPT57MG3YV9R" target="_blank" class="project-card" data-tilt>
+              <img src="images/optimized/Effective Communication- Writing, Design, and Presentation.png" alt="Effective Communication" class="project-image" />
+              <h3 class="project-title">Effective Communication</h3>
+              <p class="project-description">University of Colorado Boulder</p>
+            </a>
           </div>
           <div style="text-align: center; margin-top: 2rem;">
             <a href="certifications.html" class="cta-button">View All Certifications &amp; Courses</a>
           </div>
         </div>
       </section>
+
+            <!-- ADDITIONAL RESOURCES SECTION -->
+            <section id="additional-resources" class="section">
+              <div class="container">
+                <h2 class="section-title">Additional Resources</h2>
+                <div class="projects-grid">
+                  <a href="https://www.linkedin.com/in/rajeel-ali/" class="project-card" data-tilt>
+                    <img src="images/optimized/image1.jpg" alt="LinkedIn Profile" class="project-image" />
+                    <h3 class="project-title">LinkedIn Profile</h3>
+                    <p class="project-description">Connect with me professionally and explore collaboration opportunities.</p>
+                    <span class="project-link">Visit LinkedIn</span>
+                  </a>
+                  <a href="https://rajeel.notion.site" class="project-card" data-tilt>
+                    <img src="images/optimized/image2.jpg" alt="Notion Site" class="project-image" />
+                    <h3 class="project-title">Get to Know Me</h3>
+                    <p class="project-description">Explore my Notion site for comprehensive information about my work and experiences.</p>
+                    <span class="project-link">Visit Notion Site</span>
+                  </a>
+                  <a href="projects/index.html" class_="project-card" data-tilt>
+                    <img src="images/optimized/project.png" alt="Practice Projects" class="project-image" />
+                    <h3 class="project-title">Practice Projects</h3>
+                    <p class="project-description">Explore a collection of my practice projects and coding exercises.</p>
+                    <span class="project-link">View Projects</span>
+                  </a>
+                </div>
+              </div>
+            </section>
 
       <!-- CONTACT SECTION -->
       <section id="contact" class="section">
@@ -276,6 +341,12 @@
 
     <footer>
       <div class="container">
+        <div class="social-links">
+          <a href="https://www.linkedin.com/in/rajeel-ali/" target="_blank"><i class="socicon-linkedin"></i></a>
+          <a href="https://github.com/RajeelAli" target="_blank"><i class="socicon-github"></i></a>
+          <a href="https://www.facebook.com/AliRajeel/" target="_blank"><i class="socicon-facebook"></i></a>
+          <a href="https://www.instagram.com/rajeelali/" target="_blank"><i class="socicon-instagram"></i></a>
+        </div>
         <p>&copy; 2025 Rajeel Ali</p>
       </div>
     </footer>
@@ -287,6 +358,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
-    <script src="script.js"></script>
+    <script src="script.min.js"></script>
   </body>
 </html>
