modified:   .gitignore 	new file:   README.md 	modified:   public/404.html 	new file:   public/ecom/about.html 	new file:   public/ecom/beverages.html 	new file:   public/ecom/faq.html 	new file:   public/ecom/gourmet.html 	new file:   public/ecom/groceries.html 	new file:   public/ecom/household.html 	renamed:    public/images/1.png -> public/ecom/images/1.png 	renamed:    public/images/10.png -> public/ecom/images/10.png 	renamed:    public/images/13.png -> public/ecom/images/13.png 	renamed:    public/images/14.png -> public/ecom/images/14.png 	renamed:    public/images/15.png -> public/ecom/images/15.png 	renamed:    public/images/16.png -> public/ecom/images/16.png 	renamed:    public/images/17.png -> public/ecom/images/17.png 	renamed:    public/images/2.png -> public/ecom/images/2.png 	renamed:    public/images/3.png -> public/ecom/images/3.png 	renamed:    public/images/4.png -> public/ecom/images/4.png 	renamed:    public/images/5.png -> public/ecom/images/5.png 	renamed:    public/images/6.png -> public/ecom/images/6.png 	renamed:    public/images/7.png -> public/ecom/images/7.png 	renamed:    public/images/8.png -> public/ecom/images/8.png 	renamed:    public/images/9.png -> public/ecom/images/9.png renamed:    public/images/arrow.png -> public/ecom/images/arrow.png 	renamed:    public/images/bv1.png -> public/ecom/images/bv1.png 	renamed:    public/images/bv2.png -> public/ecom/images/bv2.png 	renamed:    public/images/bv3.png -> public/ecom/images/bv3.png 	renamed:    public/images/bv4.png -> public/ecom/images/bv4.png 	renamed:    public/images/card.png -> public/ecom/images/card.png 	new file:   public/ecom/images/midfin.png 	modified:   public/ecom/index1.html 	new file:   public/ecom/packagedfoods.html 	new file:   public/ecom/personalcare.html 	new file:   public/ecom/products.html 	new file:   public/ecom/short-codes.html 	new file:   public/images/Google Digital Marketing & E-commerce.png 	new file:   public/images/calc.png 	new file:   public/im

--- a/public/ecom/index1.html
+++ b/public/ecom/index1.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Rajeel's UMT assignment</title>
+<title>Rajeel's Store</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -70,9 +70,7 @@
 				</ul>
 			</div>
 			<div class="w3ls_logo_products_left">
-				<h1><a href="index.html">F2022466027</a></h1>
-				<h5><a href="js.html">homework js link</a></h5>
-
+				<h1><a href="index.html">Rajeel's Store</a></h1>
 			</div>
 		<div class="w3l_search">
 			<form action="#" method="post">
@@ -198,7 +196,7 @@
 														<li><a href="beverages.html">Tea Bags</a></li>
 													</ul>
 												</div>
-							
+											
 											</div>
 										</ul>
 									</li>
@@ -522,7 +520,7 @@
 		<div class="footer-copy">
 			
 			<div class="container">
-				<p>© 2024 ID:F2022466027. All rights reserved | Design by <a href="http://proprofile.web.app/">Rajeel ali</a></p>
+				<p>© 2024 Rajeel's Store. All rights reserved | Design by <a href="http://proprofile.web.app/">Rajeel ali</a></p>
 			</div>
 		</div>
 		
