--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Rajeel Ali is a Social Media Manager, Frontend Developer, and Digital Marketing Specialist. Explore his portfolio, skills, and projects.">
     <title>Rajeel Ali - Digital Innovator</title>
-    <link rel="icon" type="image/png" href="images/favicon.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/socicon@3.0.5/css/socicon.min.css" />
+    <link rel="icon" type="image/png" href="images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="style.min.css" />
   </head>
@@ -18,7 +17,7 @@
           <a href="#about">About</a>
           <a href="#skills">Skills</a>
           <a href="#projects">Projects</a>
-          <a href="https://rajeel.web.app/portfolio.html">Portfolio</a>
+          <a href="#badges">Certs</a>
           <a href="#contact">Contact</a>
         </div>
       </nav>
@@ -178,43 +177,44 @@
       <section id="badges" class="section">
         <div class="container">
           <h2 class="section-title">Badges</h2>
+          <p style="text-align: center;">Click the badge or cert to Verify</p>
           <div class="projects-grid">
-            <a href="https://www.coursera.org/account/accomplishments/professional-cert/624FTQJSQCVU" target="_blank" class="project-card" data-tilt>
+            <a href="https://www.credly.com/badges/3100488e-9f9d-4c23-9712-993be145b769/public_url" target="_blank" class="project-card" data-tilt>
               <img src="images/optimized/meta-social-media-marketing-professional-certificate.png" alt="Meta Social Media Marketing" class="project-image" />
               <h3 class="project-title">Meta Social Media Marketing</h3>
               <p class="project-description">Meta</p>
             </a>
-            <div class="project-card" data-tilt>
+            <a href="https://www.credly.com/badges/d3b6fbb2-5c11-4e7d-8457-217a251a9657/public_url" target="_blank" class="project-card" data-tilt>
               <img src="images/optimized/develop-generative-ai-applications-get-started.png" alt="Develop Generative AI Applications" class="project-image" />
               <h3 class="project-title">Develop Generative AI Applications</h3>
               <p class="project-description">Coursera</p>
-            </div>
-            <div class="project-card" data-tilt>
+            </a>
+            <a href="https://www.credly.com/badges/c5ba7f1f-2494-4cb8-ae19-d2c74dd8f5b9/public_url" target="_blank" class="project-card" data-tilt>
               <img src="images/optimized/meta-certified-digital-marketing-associate.png" alt="Meta Certified Digital Marketing Associate" class="project-image" />
               <h3 class="project-title">Meta Certified Digital Marketing Associate</h3>
               <p class="project-description">Meta</p>
-            </div>
-            <div class="project-card" data-tilt>
+            </a>
+            <a href="https://www.credly.com/badges/91d08a0b-8efb-4985-bfe6-fb5507ccfabe/public_url" target="_blank" class="project-card" data-tilt>
               <img src="images/optimized/data-analysis-with-python.png" alt="Data Analysis with Python" class="project-image" />
               <h3 class="project-title">Data Analysis with Python</h3>
               <p class="project-description">Coursera</p>
-            </div>
-            <div class="project-card" data-tilt>
+            </a>
+            <a href="https://www.credly.com/badges/3eb20df1-2e93-410d-996a-5ae10d8a44c2/public_url" target="_blank" class="project-card" data-tilt>
               <img src="images/optimized/AI-Essentials-Certificate.png" alt="Google AI Essentials" class="project-image" />
               <h3 class="project-title">Google AI Essentials</h3>
               <p class="project-description">Coursera</p>
-            </div>
-            <a href="https://www.coursera.org/account/accomplishments/professional-cert/JFS43RKDY6AJ" target="_blank" class="project-card" data-tilt>
+            </a>
+            <a href="https://www.credly.com/badges/21398587-8dbb-4217-bfc0-ff21d96339e2/public_url" target="_blank" class="project-card" data-tilt>
               <img src="images/optimized/google-business-intelligence-certificate.png" alt="Google Business Intelligence" class="project-image" />
               <h3 class="project-title">Google Business Intelligence</h3>
               <p class="project-description">Coursera</p>
             </a>
-            <a href="https://www.coursera.org/account/accomplishments/professional-cert/Q82E4FC847NG" target="_blank" class="project-card" data-tilt>
+            <a href="https://www.credly.com/badges/f2b6156d-d0fc-476d-bf60-464ec3c4520c/public_url" target="_blank" class="project-card" data-tilt>
               <img src="images/optimized/meta-front-end-developer-certificate.png" alt="Meta Front-End Developer" class="project-image" />
               <h3 class="project-title">Meta Front-End Developer</h3>
               <p class="project-description">Coursera</p>
             </a>
-            <a href="https://www.coursera.org/account/accomplishments/professional-cert/USW4WCD29AAR" target="_blank" class="project-card" data-tilt>
+            <a href="https://www.credly.com/badges/fa08d8bc-33f8-4ca0-8991-080938f4de43/public_url" target="_blank" class="project-card" data-tilt>
               <img src="images/optimized/google-digital-marketing-and-e-commerce-professiona.png" alt="Google Digital Marketing & E-commerce" class="project-image" />
               <h3 class="project-title">Google Digital Marketing & E-commerce</h3>
               <p class="project-description">Coursera</p>
@@ -226,8 +226,13 @@
       <!-- SPECIALIZATIONS SECTION -->
       <section id="specializations" class="section">
         <div class="container">
-          <h2 class="section-title">My Certs</h2>
+          <h2 class="section-title">My Specializations & Professional Certificates</h2>
           <div class="projects-grid">
+            <a href="https://www.coursera.org/account/accomplishments/professional-cert/USW4WCD29AAR" target="_blank" class="project-card" data-tilt>
+              <img src="images/Google Digital Marketing & E-commerce.png" alt="Google Digital Marketing & E-commerce" class="project-image" />
+              <h3 class="project-title">Google Digital Marketing & E-commerce</h3>
+              <p class="project-description">Google</p>
+            </a>
             <a href="https://www.coursera.org/account/accomplishments/specialization/AWX9ET5SG5NQ" target="_blank" class="project-card" data-tilt>
               <img src="images/optimized/cert_m365.png" alt="Microsoft 365 Fundamentals" class="project-image" />
               <h3 class="project-title">Microsoft 365 Fundamentals</h3>
@@ -287,7 +292,7 @@
                     <p class="project-description">Explore my Notion site for comprehensive information about my work and experiences.</p>
                     <span class="project-link">Visit Notion Site</span>
                   </a>
-                  <a href="projects/index.html" class_="project-card" data-tilt>
+                  <a href="projects/index.html" class="project-card" data-tilt>
                     <img src="images/optimized/project.png" alt="Practice Projects" class="project-image" />
                     <h3 class="project-title">Practice Projects</h3>
                     <p class="project-description">Explore a collection of my practice projects and coding exercises.</p>
@@ -342,16 +347,16 @@
     <footer>
       <div class="container">
         <div class="social-links">
-          <a href="https://www.linkedin.com/in/rajeel-ali/" target="_blank"><i class="socicon-linkedin"></i></a>
-          <a href="https://github.com/RajeelAli" target="_blank"><i class="socicon-github"></i></a>
-          <a href="https://www.facebook.com/AliRajeel/" target="_blank"><i class="socicon-facebook"></i></a>
-          <a href="https://www.instagram.com/rajeelali/" target="_blank"><i class="socicon-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/rajeel-ali/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/Rajeel-Ali" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.facebook.com/AliRajeel/" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://www.instagram.com/rajeelali/" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
         <p>&copy; 2025 Rajeel Ali</p>
       </div>
     </footer>
 
-    <div class="custom-cursor"></div>
+   <!-- <div class="custom-cursor"></div> --> 
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
