--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -1,85 +1,105 @@
-
-<html>
-  <head>
-    <base href="#" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rajeel Ali - Projects</title>
-    <link rel="stylesheet" href="../style.css" />
-  </head>
-  <body>
-    <header class="page-header">
-      <h1>Projects</h1>
-      <p>These are some simple projects I made while practicing and learning web development</p>
+    <link rel="icon" type="image/png" href="/images/favicon.ico">
+    <link rel="stylesheet" href="../style.min.css?v=1.1">
+    <link rel="stylesheet" href="pstyle.css?v=1.1">
+</head>
+<body>
+    <header>
+        <nav class="container">
+            <div class="nav-links">
+                <a href="../index.html#about">About</a>
+                <a href="../index.html#skills">Skills</a>
+                <a href="../index.html#projects">Projects</a>
+                <a href="../index.html#badges">Certs</a>
+                <a href="../index.html#contact">Contact</a>
+            </div>
+        </nav>
     </header>
 
-    <section id="projects" class="section">
-      <div class="container">
-        <h2 class="section-title">Projects</h2>
-        <div class="project-grid"></div>
-      </div>
-    </section>
+    <main>
+        <section id="projects" class="section">
+            <div class="container">
+                <h2 class="section-title">My Projects</h2>
+                <div class="projects-grid">
+                    <!-- Calculator Project -->
+                    <a href="calculator/index.html" class="project-card" data-tilt>
+                        <img src="../images/calc.png" alt="Calculator Project" class="project-image" />
+                        <h3 class="project-title">Advanced Futuristic Calculator</h3>
+                        <p class="project-description">An advanced, futuristic calculator with a unique UI and particle effects.</p>
+                        <span class="project-link">View Project</span>
+                    </a>
 
+                    <!-- To-Do List Project -->
+                    <a href="todo-list/index.html" class="project-card" data-tilt>
+                        <img src="../images/list.png" alt="To-Do List Project" class="project-image" />
+                        <h3 class="project-title">To-Do List</h3>
+                        <p class="project-description">A to-do list application to manage your tasks.</p>
+                        <span class="project-link">View Project</span>
+                    </a>
+
+                    <!-- Password Generator Project -->
+                    <a href="password-generator/index.html" class="project-card" data-tilt>
+                        <img src="../images/pass.png" alt="Password Generator Project" class="project-image" />
+                        <h3 class="project-title">Futuristic Password Generator</h3>
+                        <p class="project-description">A secure password generator with a sleek, futuristic interface and customizable options.</p>
+                        <span class="project-link">View Project</span>
+                    </a>
+                    <!-- IP Tracker Project -->
+                    <a href="ip-tracker/index.html" class="project-card" data-tilt>
+                        <img src="../images/ip.png" alt="IP Tracker Project" class="project-image" />
+                        <h3 class="project-title">Futuristic IP Tracker</h3>
+                        <p class="project-description">A tool to find and display information about an IP address on an interactive map.</p>
+                        <span class="project-link">View Project</span>
+                    </a>
+                    <!-- Music Player Project -->
+                    <a href="music-player/index.html" class="project-card" data-tilt>
+                        <img src="../images/music.png" alt="Music Player Project" class="project-image" />
+                        <h3 class="project-title">Futuristic Music Player</h3>
+                        <p class="project-description">A sleek, futuristic music player with a playlist and audio visualizer.</p>
+                        <span class="project-link">View Project</span>
+                    </a>
+                    <!-- Typing Speed Test Project -->
+                    <a href="typing-test/index.html" class="project-card" data-tilt>
+                        <img src="../images/typing.png" alt="Typing Speed Test Project" class="project-image" />
+                        <h3 class="project-title">Futuristic Typing Speed Test</h3>
+                        <p class="project-description">A game to test your typing speed and accuracy.</p>
+                        <span class="project-link">View Project</span>
+                    </a>
+                    <!-- Advanced Weather App Project -->
+                    <a href="advanced-weather-app/index.html" class="project-card" data-tilt>
+                        <img src="../images/weather.png" alt="Advanced Weather App Project" class="project-image" />
+                        <h3 class="project-title">Advanced Weather App</h3>
+                        <p class.project-description">A weather app with a 5-day forecast and dynamic animations.</p>
+                        <span class="project-link">View Project</span>
+                    </a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/rajeel-ali/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/Rajeel-Ali" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.facebook.com/AliRajeel/" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/rajeelali/" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+            <p>&copy; 2025 Rajeel Ali</p>
+        </div>
+    </footer>
+
+    <div class="custom-cursor"></div>
+
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script>
-      const projects = [
-        { name: "Calculator", link: "calc.html" },
-        { name: " jQuery ", link: "jq.html" },
-        { name: "Form with jQuery", link: "assignments/form.html" },
-        { name: "To-DO list with jQuery", link: "jqtest.html" },
-        { name: "Find and replace", link: "new.html" },
-        { name: "Change bg color", link: "one.html" },
-        { name: " Sorting project ", link: "sort.html" },
-        { name: "Trivia", link: "trivia.html" },
-        { name: "Form", link: "two.html" },
-      ];
-
-      const projectGrid = document.querySelector(".project-grid");
-
-      projects.forEach((project) => {
-        const card = document.createElement("div");
-        card.classList.add("project-card");
-
-        card.innerHTML = `<h3>${project.name}</h3>`;
-
-        card.addEventListener("click", () => {
-          window.location.href = project.link;
-        });
-
-        projectGrid.appendChild(card);
-      });
-
-      gsap.registerPlugin(ScrollTrigger);
-
-      gsap.from("header h1, header p", {
-        opacity: 0,
-        y: 50,
-        duration: 1,
-        stagger: 0.3,
-        ease: "power3.out",
-      });
-
-      gsap.utils.toArray(".project-card").forEach((card) => {
-        gsap.from(card, {
-          opacity: 0,
-          y: 50,
-          duration: 0.8,
-          scrollTrigger: {
-            trigger: card,
-            start: "top 80%",
-          },
-        });
-      });
-
-      gsap.from(".section-title::after", {
-        scaleX: 0,
-        duration: 1,
-        scrollTrigger: {
-          trigger: ".section-title",
-          start: "top 80%",
-        },
-      });
-    </script>
-  </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
+    <script src="../script.min.js"></script>
+</body>
 </html>
