--- a/public/projects/sort.html
+++ b/public/projects/sort.html
@@ -1,4 +1,4 @@
-<html><head><base href="https://rajeel.web.app/"><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Futuristic Sort Operation</title><style>
+<html><head><base href="https://rajeel.web.app/"><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Futuristic Sort Operation</title><link rel="icon" type="image/png" href="/images/favicon.ico"><style>
   @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
   
   :root {
