--- a/public/projects/trivia.html
+++ b/public/projects/trivia.html
@@ -4,6 +4,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
         <link href="trivia.css" rel="stylesheet">
+        <link rel="icon" type="image/png" href="/images/favicon.ico">
         <title>Trivia!</title>
         <script>
             // TODO: Add code to check answers to questions
