--- a/public/projects/two.html
+++ b/public/projects/two.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" type="image/png" href="/images/favicon.ico">
 
     <link rel="stylesheet" href="styles.css">
     
@@ -72,7 +73,7 @@
 
 function formsubmit() {
   var a = document.getElementById("name").value;
-  var b = document.getElementById("email").value;
+  var b = document.getElementById('email').value;
   var c = document.getElementById("password").value;
   var d = document.getElementById("male").checked;
   var e = document.getElementById("female").checked;
